--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ Flask-Migrate==2.5.3
 Flask-Security==3.0.0
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
-jwt==1.0.0
+pyjwt==1.7.1
 pandas==1.0.3
 phonenumbers==8.12.2
 email_validator
